[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Menu.tres" type="Theme" id=2]
[ext_resource path="res://Menu/escenario.tres" type="TileSet" id=3]
[ext_resource path="res://Music/music_menu.mp3" type="AudioStream" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 20, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 20, 0, 9, 20, 0, 10, 20, 0, 11, 20, 0, 12, 20, 0, 13, 20, 0, 14, 20, 0, 15, 20, 0, 16, 20, 0, 17, 20, 0, 18, 20, 0, 19, 20, 0, 20, 20, 0, 21, 20, 0, 22, 20, 0, 23, 20, 0, 24, 20, 0, 25, 20, 0, 26, 20, 0, 27, 20, 0, 28, 20, 0, 29, 20, 0, 65536, 20, 0, 65537, 20, 0, 65538, 20, 0, 65539, 20, 0, 65540, 20, 0, 65541, 20, 0, 65542, 20, 0, 65543, 20, 0, 65544, 20, 0, 65545, 20, 0, 65546, 20, 0, 65547, 20, 0, 65548, 20, 0, 65549, 20, 0, 65550, 20, 0, 65551, 20, 0, 65552, 20, 0, 65553, 20, 0, 65554, 20, 0, 65555, 20, 0, 65556, 20, 0, 65557, 20, 0, 65558, 20, 0, 65559, 20, 0, 65560, 20, 0, 65561, 20, 0, 65562, 20, 0, 65563, 20, 0, 65564, 20, 0, 65565, 20, 0, 131072, 20, 0, 131073, 20, 0, 131074, 20, 0, 131075, 20, 0, 131076, 20, 0, 131077, 20, 0, 131078, 20, 0, 131079, 20, 0, 131080, 20, 0, 131081, 20, 0, 131082, 20, 0, 131083, 20, 0, 131084, 20, 0, 131085, 20, 0, 131086, 20, 0, 131087, 20, 0, 131088, 20, 0, 131089, 20, 0, 131090, 20, 0, 131091, 20, 0, 131092, 20, 0, 131093, 20, 0, 131094, 20, 0, 131095, 20, 0, 131096, 20, 0, 131097, 20, 0, 131098, 20, 0, 131099, 20, 0, 131100, 20, 0, 131101, 20, 0, 196608, 20, 0, 196609, 13, 0, 196610, 20, 0, 196611, 20, 0, 196612, 18, 0, 196613, 20, 0, 196614, 20, 0, 196615, 20, 0, 196616, 20, 0, 196617, 20, 0, 196618, 20, 0, 196619, 20, 0, 196620, 20, 0, 196621, 20, 0, 196622, 20, 0, 196623, 20, 0, 196624, 20, 0, 196625, 20, 0, 196626, 20, 0, 196627, 20, 0, 196628, 20, 0, 196629, 20, 0, 196630, 20, 0, 196631, 20, 0, 196632, 20, 0, 196633, 20, 0, 196634, 13, 0, 196635, 20, 0, 196636, 20, 0, 196637, 20, 0, 262144, 20, 0, 262145, 20, 0, 262146, 20, 0, 262147, 20, 0, 262148, 20, 0, 262149, 20, 0, 262150, 18, 0, 262151, 20, 0, 262152, 20, 0, 262153, 20, 0, 262154, 20, 0, 262155, 20, 0, 262156, 20, 0, 262157, 20, 0, 262158, 20, 0, 262159, 20, 0, 262160, 20, 0, 262161, 20, 0, 262162, 20, 0, 262163, 20, 0, 262164, 20, 0, 262165, 20, 0, 262166, 20, 0, 262167, 20, 0, 262168, 20, 0, 262169, 20, 0, 262170, 20, 0, 262171, 20, 0, 262172, 20, 0, 262173, 20, 0, 327680, 20, 0, 327681, 20, 0, 327682, 20, 0, 327683, 20, 0, 327684, 20, 0, 327685, 20, 0, 327686, 20, 0, 327687, 20, 0, 327688, 20, 0, 327689, 20, 0, 327690, 20, 0, 327691, 20, 0, 327692, 20, 0, 327693, 20, 0, 327694, 20, 0, 327695, 20, 0, 327696, 20, 0, 327697, 20, 0, 327698, 20, 0, 327699, 20, 0, 327700, 20, 0, 327701, 20, 0, 327702, 20, 0, 327703, 18, 0, 327704, 20, 0, 327705, 20, 0, 327706, 20, 0, 327707, 20, 0, 327708, 20, 0, 327709, 20, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 20, 0, 393220, 20, 0, 393221, 20, 0, 393222, 20, 0, 393223, 20, 0, 393224, 20, 0, 393225, 20, 0, 393226, 20, 0, 393227, 20, 0, 393228, 20, 0, 393229, 20, 0, 393230, 20, 0, 393231, 20, 0, 393232, 20, 0, 393233, 20, 0, 393234, 20, 0, 393235, 20, 0, 393236, 20, 0, 393237, 20, 0, 393238, 20, 0, 393239, 20, 0, 393240, 20, 0, 393241, 20, 0, 393242, 13, 0, 393243, 20, 0, 393244, 20, 0, 393245, 20, 0, 458752, 20, 0, 458753, 20, 0, 458754, 20, 0, 458755, 20, 0, 458756, 20, 0, 458757, 20, 0, 458758, 20, 0, 458759, 20, 0, 458760, 13, 0, 458761, 20, 0, 458762, 20, 0, 458763, 20, 0, 458764, 20, 0, 458765, 20, 0, 458766, 20, 0, 458767, 20, 0, 458768, 20, 0, 458769, 20, 0, 458770, 20, 0, 458771, 20, 0, 458772, 20, 0, 458773, 20, 0, 458774, 20, 0, 458775, 20, 0, 458776, 20, 0, 458777, 20, 0, 458778, 20, 0, 458779, 20, 0, 458780, 20, 0, 458781, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 20, 0, 524293, 20, 0, 524294, 20, 0, 524295, 20, 0, 524296, 20, 0, 524297, 20, 0, 524298, 20, 0, 524299, 20, 0, 524300, 20, 0, 524301, 20, 0, 524302, 20, 0, 524303, 20, 0, 524304, 20, 0, 524305, 20, 0, 524306, 20, 0, 524307, 20, 0, 524308, 20, 0, 524309, 20, 0, 524310, 20, 0, 524311, 20, 0, 524312, 20, 0, 524313, 20, 0, 524314, 20, 0, 524315, 20, 0, 524316, 20, 0, 524317, 20, 0, 589824, 20, 0, 589825, 20, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589830, 20, 0, 589831, 20, 0, 589832, 20, 0, 589833, 20, 0, 589834, 20, 0, 589835, 20, 0, 589836, 20, 0, 589837, 20, 0, 589838, 20, 0, 589839, 20, 0, 589840, 20, 0, 589841, 20, 0, 589842, 20, 0, 589843, 20, 0, 589844, 20, 0, 589845, 20, 0, 589846, 20, 0, 589847, 20, 0, 589848, 20, 0, 589849, 20, 0, 589850, 18, 0, 589851, 20, 0, 589852, 20, 0, 589853, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 19, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 19, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 20, 0, 655378, 20, 0, 655379, 20, 0, 655380, 20, 0, 655381, 20, 0, 655382, 20, 0, 655383, 20, 0, 655384, 20, 0, 655385, 20, 0, 655386, 20, 0, 655387, 20, 0, 655388, 20, 0, 655389, 20, 0, 720896, 20, 0, 720897, 20, 0, 720898, 20, 0, 720899, 20, 0, 720900, 20, 0, 720901, 20, 0, 720902, 20, 0, 720903, 20, 0, 720904, 20, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 20, 0, 720909, 20, 0, 720910, 20, 0, 720911, 20, 0, 720912, 20, 0, 720913, 20, 0, 720914, 20, 0, 720915, 20, 0, 720916, 20, 0, 720917, 20, 0, 720918, 20, 0, 720919, 20, 0, 720920, 20, 0, 720921, 20, 0, 720922, 20, 0, 720923, 20, 0, 720924, 20, 0, 720925, 20, 0, 786432, 20, 0, 786433, 20, 0, 786434, 20, 0, 786435, 20, 0, 786436, 20, 0, 786437, 20, 0, 786438, 20, 0, 786439, 20, 0, 786440, 20, 0, 786441, 20, 0, 786442, 20, 0, 786443, 20, 0, 786444, 20, 0, 786445, 20, 0, 786446, 20, 0, 786447, 20, 0, 786448, 20, 0, 786449, 20, 0, 786450, 20, 0, 786451, 20, 0, 786452, 20, 0, 786453, 20, 0, 786454, 20, 0, 786455, 20, 0, 786456, 20, 0, 786457, 20, 0, 786458, 20, 0, 786459, 20, 0, 786460, 20, 0, 786461, 20, 0, 851968, 20, 0, 851969, 20, 0, 851970, 20, 0, 851971, 20, 0, 851972, 20, 0, 851973, 20, 0, 851974, 20, 0, 851975, 19, 0, 851976, 20, 0, 851977, 20, 0, 851978, 20, 0, 851979, 20, 0, 851980, 20, 0, 851981, 20, 0, 851982, 20, 0, 851983, 20, 0, 851984, 20, 0, 851985, 20, 0, 851986, 20, 0, 851987, 20, 0, 851988, 20, 0, 851989, 20, 0, 851990, 20, 0, 851991, 20, 0, 851992, 19, 0, 851993, 20, 0, 851994, 20, 0, 851995, 20, 0, 851996, 20, 0, 851997, 20, 0, 917504, 20, 0, 917505, 20, 0, 917506, 20, 0, 917507, 20, 0, 917508, 20, 0, 917509, 20, 0, 917510, 20, 0, 917511, 20, 0, 917512, 20, 0, 917513, 20, 0, 917514, 20, 0, 917515, 20, 0, 917516, 20, 0, 917517, 20, 0, 917518, 20, 0, 917519, 20, 0, 917520, 20, 0, 917521, 20, 0, 917522, 20, 0, 917523, 20, 0, 917524, 20, 0, 917525, 20, 0, 917526, 19, 0, 917527, 20, 0, 917528, 20, 0, 917529, 20, 0, 917530, 20, 0, 917531, 20, 0, 917532, 20, 0, 917533, 20, 0, 983040, 20, 0, 983041, 20, 0, 983042, 20, 0, 983043, 20, 0, 983044, 20, 0, 983045, 20, 0, 983046, 20, 0, 983047, 20, 0, 983048, 20, 0, 983049, 20, 0, 983050, 20, 0, 983051, 20, 0, 983052, 20, 0, 983053, 20, 0, 983054, 20, 0, 983055, 20, 0, 983056, 20, 0, 983057, 20, 0, 983058, 20, 0, 983059, 20, 0, 983060, 20, 0, 983061, 20, 0, 983062, 20, 0, 983063, 20, 0, 983064, 20, 0, 983065, 20, 0, 983066, 20, 0, 983067, 20, 0, 983068, 20, 0, 983069, 20, 0, 1048576, 20, 0, 1048577, 20, 0, 1048578, 20, 0, 1048579, 20, 0, 1048580, 20, 0, 1048581, 20, 0, 1048582, 20, 0, 1048583, 20, 0, 1048584, 20, 0, 1048585, 20, 0, 1048586, 20, 0, 1048587, 20, 0, 1048588, 20, 0, 1048589, 20, 0, 1048590, 20, 0, 1048591, 20, 0, 1048592, 20, 0, 1048593, 20, 0, 1048594, 20, 0, 1048595, 20, 0, 1048596, 20, 0, 1048597, 20, 0, 1048598, 20, 0, 1048599, 20, 0, 1048600, 20, 0, 1048601, 20, 0, 1048602, 20, 0, 1048603, 20, 0, 1048604, 20, 0, 1048605, 20, 0 )

[node name="Foreground" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 20, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 20, 0, 9, 20, 0, 10, 20, 0, 11, 20, 0, 12, 20, 0, 13, 20, 0, 14, 20, 0, 15, 20, 0, 16, 20, 0, 17, 20, 0, 18, 20, 0, 19, 20, 0, 20, 20, 0, 21, 20, 0, 22, 20, 0, 23, 20, 0, 24, 20, 0, 25, 20, 0, 26, 20, 0, 27, 20, 0, 28, 20, 0, 29, 20, 0, 65536, 20, 0, 65537, 20, 0, 65538, 20, 0, 65539, 20, 0, 65540, 20, 0, 65541, 20, 0, 65542, 20, 0, 65543, 20, 0, 65544, 20, 0, 65545, 20, 0, 65546, 20, 0, 65547, 30, 0, 65548, 20, 0, 65549, 27, 0, 65550, 20, 0, 65551, 20, 0, 65552, 21, 0, 65553, 28, 0, 65554, 20, 0, 65555, 20, 0, 65556, 20, 0, 65557, 20, 0, 65558, 20, 0, 65559, 20, 0, 65560, 20, 0, 65561, 20, 0, 65562, 20, 0, 65563, 20, 0, 65564, 20, 0, 65565, 20, 0, 131072, 20, 0, 131073, 20, 0, 131074, 20, 0, 131075, 20, 0, 131076, 20, 0, 131077, 20, 0, 131078, 20, 0, 131079, 20, 0, 131080, 20, 0, 131081, 20, 0, 131082, 3, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 6, 0, 131092, 20, 0, 131093, 20, 0, 131094, 20, 0, 131095, 20, 0, 131096, 20, 0, 131097, 20, 0, 131098, 20, 0, 131099, 20, 0, 131100, 20, 0, 131101, 20, 0, 196608, 20, 0, 196609, 13, 0, 196610, 20, 0, 196611, 20, 0, 196612, 18, 0, 196613, 20, 0, 196614, 20, 0, 196615, 20, 0, 196616, 20, 0, 196617, 20, 0, 196618, 17, 0, 196619, 20, 0, 196620, 20, 0, 196621, 20, 0, 196622, 20, 0, 196623, 20, 0, 196624, 20, 0, 196625, 20, 0, 196626, 20, 0, 196627, 10, 0, 196628, 20, 0, 196629, 20, 0, 196630, 20, 0, 196631, 20, 0, 196632, 20, 0, 196633, 20, 0, 196634, 13, 0, 196635, 20, 0, 196636, 20, 0, 196637, 20, 0, 262144, 20, 0, 262145, 20, 0, 262146, 20, 0, 262147, 20, 0, 262148, 20, 0, 262149, 20, 0, 262150, 18, 0, 262151, 20, 0, 262152, 20, 0, 262153, 20, 0, 262154, 24, 0, 262155, 22, 0, 262156, 21, 0, 262157, 11, 0, 262158, 11, 0, 262159, 21, 0, 262160, 11, 0, 262161, 21, 0, 262162, 21, 0, 262163, 12, 0, 262164, 20, 0, 262165, 20, 0, 262166, 20, 0, 262167, 20, 0, 262168, 20, 0, 262169, 20, 0, 262170, 20, 0, 262171, 20, 0, 262172, 20, 0, 262173, 20, 0, 327680, 20, 0, 327681, 20, 0, 327682, 20, 0, 327683, 20, 0, 327684, 20, 0, 327685, 20, 0, 327686, 20, 0, 327687, 20, 0, 327688, 20, 0, 327689, 20, 0, 327690, 20, 0, 327691, 20, 0, 327692, 20, 0, 327693, 20, 0, 327694, 20, 0, 327695, 20, 0, 327696, 20, 0, 327697, 20, 0, 327698, 30, 0, 327699, 20, 0, 327700, 20, 0, 327701, 20, 0, 327702, 20, 0, 327703, 18, 0, 327704, 20, 0, 327705, 20, 0, 327706, 20, 0, 327707, 20, 0, 327708, 20, 0, 327709, 20, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 20, 0, 393220, 20, 0, 393221, 20, 0, 393222, 20, 0, 393223, 20, 0, 393224, 20, 0, 393225, 20, 0, 393226, 26, 0, 393227, 26, 0, 393228, 20, 0, 393229, 28, 0, 393230, 20, 0, 393231, 20, 0, 393232, 20, 0, 393233, 19, 0, 393234, 29, 0, 393235, 20, 0, 393236, 20, 0, 393237, 20, 0, 393238, 20, 0, 393239, 20, 0, 393240, 20, 0, 393241, 20, 0, 393242, 13, 0, 393243, 20, 0, 393244, 20, 0, 393245, 20, 0, 458752, 20, 0, 458753, 20, 0, 458754, 23, 0, 458755, 21, 0, 458756, 20, 0, 458757, 20, 0, 458758, 20, 0, 458759, 20, 0, 458760, 13, 0, 458761, 20, 0, 458762, 3, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 6, 0, 458772, 20, 0, 458773, 20, 0, 458774, 20, 0, 458775, 20, 0, 458776, 20, 0, 458777, 20, 0, 458778, 20, 0, 458779, 20, 0, 458780, 20, 0, 458781, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 20, 0, 524293, 20, 0, 524294, 20, 0, 524295, 20, 0, 524296, 20, 0, 524297, 20, 0, 524298, 17, 0, 524299, 20, 0, 524300, 20, 0, 524301, 20, 0, 524302, 20, 0, 524303, 20, 0, 524304, 20, 0, 524305, 20, 0, 524306, 20, 0, 524307, 10, 0, 524308, 20, 0, 524309, 20, 0, 524310, 20, 0, 524311, 20, 0, 524312, 20, 0, 524313, 20, 0, 524314, 20, 0, 524315, 20, 0, 524316, 20, 0, 524317, 20, 0, 589824, 20, 0, 589825, 20, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589830, 20, 0, 589831, 20, 0, 589832, 20, 0, 589833, 20, 0, 589834, 24, 0, 589835, 22, 0, 589836, 11, 0, 589837, 22, 0, 589838, 21, 0, 589839, 22, 0, 589840, 21, 0, 589841, 21, 0, 589842, 11, 0, 589843, 12, 0, 589844, 20, 0, 589845, 20, 0, 589846, 20, 0, 589847, 20, 0, 589848, 20, 0, 589849, 20, 0, 589850, 18, 0, 589851, 20, 0, 589852, 20, 0, 589853, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 19, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 19, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 20, 0, 655378, 20, 0, 655379, 20, 0, 655380, 20, 0, 655381, 19, 0, 655382, 11, 0, 655383, 21, 0, 655384, 20, 0, 655385, 20, 0, 655386, 20, 0, 655387, 20, 0, 655388, 20, 0, 655389, 20, 0, 720896, 20, 0, 720897, 20, 0, 720898, 20, 0, 720899, 20, 0, 720900, 20, 0, 720901, 20, 0, 720902, 20, 0, 720903, 20, 0, 720904, 20, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 21, 0, 720909, 20, 0, 720910, 20, 0, 720911, 30, 0, 720912, 20, 0, 720913, 20, 0, 720914, 27, 0, 720915, 20, 0, 720916, 20, 0, 720917, 20, 0, 720918, 20, 0, 720919, 20, 0, 720920, 20, 0, 720921, 20, 0, 720922, 20, 0, 720923, 20, 0, 720924, 20, 0, 720925, 20, 0, 786432, 20, 0, 786433, 20, 0, 786434, 20, 0, 786435, 20, 0, 786436, 20, 0, 786437, 20, 0, 786438, 20, 0, 786439, 20, 0, 786440, 20, 0, 786441, 20, 0, 786442, 3, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 9, 0, 786452, 20, 0, 786453, 20, 0, 786454, 20, 0, 786455, 20, 0, 786456, 20, 0, 786457, 20, 0, 786458, 20, 0, 786459, 20, 0, 786460, 20, 0, 786461, 20, 0, 851968, 20, 0, 851969, 20, 0, 851970, 20, 0, 851971, 20, 0, 851972, 20, 0, 851973, 20, 0, 851974, 20, 0, 851975, 19, 0, 851976, 20, 0, 851977, 20, 0, 851978, 17, 0, 851979, 20, 0, 851980, 20, 0, 851981, 20, 0, 851982, 20, 0, 851983, 20, 0, 851984, 20, 0, 851985, 20, 0, 851986, 20, 0, 851987, 10, 0, 851988, 20, 0, 851989, 20, 0, 851990, 20, 0, 851991, 20, 0, 851992, 19, 0, 851993, 20, 0, 851994, 20, 0, 851995, 20, 0, 851996, 20, 0, 851997, 20, 0, 917504, 20, 0, 917505, 20, 0, 917506, 20, 0, 917507, 20, 0, 917508, 20, 0, 917509, 20, 0, 917510, 20, 0, 917511, 20, 0, 917512, 20, 0, 917513, 20, 0, 917514, 24, 0, 917515, 23, 0, 917516, 11, 0, 917517, 21, 0, 917518, 11, 0, 917519, 11, 0, 917520, 11, 0, 917521, 11, 0, 917522, 21, 0, 917523, 12, 0, 917524, 20, 0, 917525, 20, 0, 917526, 19, 0, 917527, 20, 0, 917528, 20, 0, 917529, 20, 0, 917530, 20, 0, 917531, 20, 0, 917532, 20, 0, 917533, 20, 0, 983040, 20, 0, 983041, 20, 0, 983042, 20, 0, 983043, 20, 0, 983044, 20, 0, 983045, 20, 0, 983046, 20, 0, 983047, 20, 0, 983048, 20, 0, 983049, 20, 0, 983050, 20, 0, 983051, 20, 0, 983052, 20, 0, 983053, 20, 0, 983054, 20, 0, 983055, 20, 0, 983056, 20, 0, 983057, 20, 0, 983058, 20, 0, 983059, 20, 0, 983060, 20, 0, 983061, 20, 0, 983062, 20, 0, 983063, 20, 0, 983064, 20, 0, 983065, 20, 0, 983066, 20, 0, 983067, 20, 0, 983068, 20, 0, 983069, 20, 0, 1048576, 20, 0, 1048577, 20, 0, 1048578, 20, 0, 1048579, 20, 0, 1048580, 20, 0, 1048581, 20, 0, 1048582, 20, 0, 1048583, 20, 0, 1048584, 20, 0, 1048585, 20, 0, 1048586, 20, 0, 1048587, 20, 0, 1048588, 20, 0, 1048589, 20, 0, 1048590, 20, 0, 1048591, 20, 0, 1048592, 20, 0, 1048593, 20, 0, 1048594, 20, 0, 1048595, 20, 0, 1048596, 20, 0, 1048597, 20, 0, 1048598, 20, 0, 1048599, 20, 0, 1048600, 20, 0, 1048601, 20, 0, 1048602, 20, 0, 1048603, 20, 0, 1048604, 20, 0, 1048605, 20, 0 )

[node name="SingleplayerButton" type="Button" parent="."]
margin_left = 665.0
margin_top = 135.0
margin_right = 1255.0
margin_bottom = 290.0
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 2 )
text = "Pulpo"

[node name="MultiplayerButton" type="Button" parent="."]
margin_left = 665.0
margin_top = 455.0
margin_right = 1255.0
margin_bottom = 610.0
theme = ExtResource( 2 )
text = "Monillo"

[node name="QuitButton" type="Button" parent="."]
margin_left = 665.0
margin_top = 775.0
margin_right = 1255.0
margin_bottom = 930.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_bottom = NodePath("../SingleplayerButton")
theme = ExtResource( 2 )
text = "Quit"

[node name="music_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
